--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "jquery": "^3.3.1",
     "mongoose": "^5.3.14",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "styled-components": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.2.0",
